Gate versioned metadata behind a feature flag
Signed-off-by: Daniel Henneberger <daniel.henneberger@atlan.com>